--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <html>
     <head>
         <Meta Charset="utf-8">
-        <title>hello wue.js</title>     
+        <title>hello wue.js</title>
+        <script src="https://unpkg.com/vue@2.5.16/dist/vue.js"></script>
     </head>
+    <body>
+        <div id="simple">
+            <!-- <h2>{{message}}</h2> -->
+            <!-- <h2 v-html="message"></h2> -->
+            <h2 v-text="message"></h2>
+            <script type="text/javascript">
+                var model={
+                    message : '첫 번째 Vue.js 1앱니다.'
+                };
+
+                var simple=new Vue({
+                    el : '#simple',
+                    data : model
+                })
+
+            </script>
+        </div>
+    </body>
 </html>
